--- a/front/app/globals.css
+++ b/front/app/globals.css
@@ -1,26 +1,23 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@theme{
+  --font-poppins: 'Poppins', sans-serif;
+  --color-shop-light-pink: #fcf0e4;
+  --color-shop_dark_green: #063c28;
+  --color-shop_btn_dark_green: #063D29;
+  --color-shop_light_bg: #f6f6f6;
+  --color-shop_light_green: #3b9c3c;
+  --color-shop_orange: #fb6c08;
+  /* darkColor: #151515,
+  lightColor: #52525b,
+  lightOrange: #fca99b,
+  lightBlue: #7688DB,
+  darkBlue: #6c7fd8,
+  darkText: #686e7d,
+  lightBg: #F8F8FB,
+  darkRed: #F02757,
+  lightText: #ababab,
+  lightGreen: #93D991,
+  productBg: #f1f3f8, */
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
 }
